--- a/app/src/main/res/layout/activity_patient_list_verwalter.xml
+++ b/app/src/main/res/layout/activity_patient_list_verwalter.xml
@@ -5,8 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PatientListVerwalter">
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="44dp"
+        android:layout_height="43dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
+        app:srcCompat="@android:drawable/ic_menu_revert" />
+
     <TextView
         android:id="@+id/patientlist"
+        android:layout_toRightOf="@+id/imageView3"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
         android:layout_width="wrap_content"
