--- a/app/src/main/res/layout/activity_mrt_test_liste.xml
+++ b/app/src/main/res/layout/activity_mrt_test_liste.xml
@@ -7,8 +7,22 @@
     android:id="@+id/testListeactv"
     tools:context=".MrtTestListe">
 
+
+    <ImageView
+        android:id="@+id/back"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="11dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginTop="31dp"
+        app:srcCompat="@android:drawable/ic_menu_revert" />
+
     <TextView
         android:id="@+id/mrttestliste"
+        android:layout_toRightOf="@+id/back"
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,15 +36,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/mrttestliste"
         android:id="@+id/testList"/>
-
-
-    <FrameLayout
-        android:id="@+id/layout"
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
-        />
-
-
 
 
 </RelativeLayout>
