--- a/app/src/main/res/layout/activity_patient_data.xml
+++ b/app/src/main/res/layout/activity_patient_data.xml
@@ -6,17 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".PatientData">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="28dp"
+        app:srcCompat="@android:drawable/ic_menu_revert" />
+
     <TextView
+        android:layout_toRightOf="@+id/imageView2"
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Patient Data"
         android:textStyle="bold"
         android:textSize="20dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
         android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"/>
+        android:layout_marginLeft="30dp"
+        />
 
     <TextView
         android:layout_below="@+id/title"
@@ -48,7 +58,7 @@
         android:id="@+id/patientID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Patient-ID:"
+        android:text="Zimmer-Nummer:"
         tools:layout_editor_absoluteX="56dp"
         tools:layout_editor_absoluteY="104dp"
         android:layout_alignParentLeft="true"
@@ -118,9 +128,9 @@
         android:layout_width="200dp"
         android:layout_height="20dp"
         android:layout_below="@+id/geschlecht"
-        android:layout_marginStart="96dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
+        android:layout_marginRight="30dp"
         android:layout_toEndOf="@id/patientID"
         android:ems="10"
         android:inputType="textPersonName"
@@ -136,7 +146,7 @@
         android:layout_marginTop="30dp"
         android:layout_toEndOf="@id/status"
         android:ems="10"
-        android:inputType="textPersonName"
+
          />
 
     <TextView
@@ -166,7 +176,7 @@
         android:layout_centerHorizontal="true"
         android:text="Save" />
 
-    <Switch
+    <CheckBox
         android:layout_below="@+id/saveData"
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
@@ -175,7 +185,7 @@
         android:layout_marginLeft="30dp"
         android:text="Send to MRT" />
 
-    <Switch
+    <CheckBox
         android:layout_below="@+id/saveData"
         android:layout_toEndOf="@+id/switch1"
         android:layout_marginTop="10dp"
@@ -184,6 +194,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send to Blood Test" />
+
 
 
 </RelativeLayout>
