--- a/app/src/main/res/layout/activity_patient_data_verwalter.xml
+++ b/app/src/main/res/layout/activity_patient_data_verwalter.xml
@@ -6,15 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".PatientDataVerwalter">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="28dp"
+        app:srcCompat="@android:drawable/ic_menu_revert" />
     <TextView
+        android:layout_toRightOf="@id/imageView2"
         android:id="@+id/titel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Patient Data"
         android:textStyle="bold"
         android:textSize="20dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="30dp"/>
 
@@ -151,6 +159,46 @@
         android:layout_marginTop="30dp"
         android:text="TextView" />
 
+    <TextView
+        android:layout_below="@+id/nummers"
+        android:id="@+id/Zimmer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="30dp"
+        android:text="Zimmer-Nummer: " />
+
+    <TextView
+        android:layout_below="@+id/textView9"
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_marginRight="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="30dp"/>
+
+    <TextView
+        android:layout_below="@id/Zimmer"
+        android:id="@+id/rufNummer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="30dp"
+        android:text="Rufnummer: " />
+
+    <TextView
+        android:layout_below="@+id/textView10"
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="30dp"
+        android:text="TextView" />
+
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
@@ -159,6 +207,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
         android:text="Discharged" />
+
+
 
 
 </RelativeLayout>
