--- a/app/src/main/res/layout/fragment_verwalter_menu.xml
+++ b/app/src/main/res/layout/fragment_verwalter_menu.xml
@@ -12,12 +12,14 @@
         android:layout_height="match_parent"></FrameLayout>
 
     <SearchView
+        android:id="@+id/search_bar"
+        android:layout_width="370dp"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_width="250dp"
-        android:layout_height="122dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="10dp"
         android:queryHint="search here"
-        />
+        android:iconifiedByDefault="false"
+        android:queryBackground="@null"/>
 
     <Button
         android:id="@+id/button2"
