--- a/app/src/main/res/layout/activity_search_verwalter.xml
+++ b/app/src/main/res/layout/activity_search_verwalter.xml
@@ -29,5 +29,8 @@
         android:layout_below="@id/search_bar"
         android:id="@+id/list_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:dividerHeight="5dp"
+        android:divider="@color/Green"
+        />
 </RelativeLayout>
