--- a/app/src/main/res/layout/activity_patient_list_verwalter.xml
+++ b/app/src/main/res/layout/activity_patient_list_verwalter.xml
@@ -35,5 +35,8 @@
         android:layout_alignParentLeft="true"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:dividerHeight="5dp"
+        android:divider="@color/Green"
+        />
 </RelativeLayout>
