--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#a8a89d</color>
     <color name="blue">#2484e3</color>
+    <color name="Green">#286b2f</color>
 </resources>
