Fixed color by PatientList

--- a/app/src/main/res/layout/activity_patient_list.xml
+++ b/app/src/main/res/layout/activity_patient_list.xml
@@ -38,6 +38,7 @@
         android:layout_height="match_parent"
         android:dividerHeight="5dp"
         android:divider="@color/Green"
+        android:background="@color/gray"
         />
 
 
