--- a/app/src/main/res/layout/activity_patient_list_verwalter.xml
+++ b/app/src/main/res/layout/activity_patient_list_verwalter.xml
@@ -38,5 +38,6 @@
         android:layout_height="match_parent"
         android:dividerHeight="5dp"
         android:divider="@color/Green"
+        android:background="@color/gray"
         />
 </RelativeLayout>
