--- a/app/src/main/res/layout/activity_search_arzt.xml
+++ b/app/src/main/res/layout/activity_search_arzt.xml
@@ -32,6 +32,7 @@
         android:layout_height="match_parent"
         android:dividerHeight="5dp"
         android:divider="@color/Green"
+        android:background="@color/gray"
         />
 
 </RelativeLayout>
