--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray">#a8a89d</color>
+    <color name="gray">#656561</color>
     <color name="blue">#2484e3</color>
     <color name="Green">#286b2f</color>
 </resources>
