fixed Search function and add new Style to ListView

--- a/app/src/main/res/layout/activity_blut_test_liste.xml
+++ b/app/src/main/res/layout/activity_blut_test_liste.xml
@@ -23,6 +23,7 @@
         android:layout_below="@+id/bluttestliste"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listview"/>
+        android:id="@+id/listview"
+        style="@style/ListViewStyle"/>
 
 </RelativeLayout>
