--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.MyApplication" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#21582D</item>
-        <item name="colorPrimaryVariant">#30813D</item>
+        <item name="colorPrimary">#14405E</item>
+        <item name="colorPrimaryVariant">#123449</item>
         <item name="colorOnPrimary">#FFF9F9</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -17,14 +17,14 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-    <style name="ListViewStyle.Light" parent="android:style/Widget.ListView">
-        <item name="background"></item>
+    <style name="ListViewStyle" parent="android:style/Widget.ListView">
+        <item name="android:background">@color/lightBlack</item>
         <item name="android:divider"></item>
-        <item name="android:dividerHeight">1dp</item>
-        <item name="android:listSelector"></item>
+        <item name="android:dividerHeight">5dp</item>
+        <item name="android:listSelector">@color/blue</item>
         <item name="android:drawSelectorOnTop">false</item>
         <item name="android:cacheColorHint">#00000000</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="Theme.MyApplication.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
