--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,15 @@
     <!-- Base application theme. -->
     <style name="Theme.MyApplication" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#9ED460</item>
-        <item name="colorPrimaryVariant">#BDE148</item>
+        <item name="colorPrimary">#408BC5</item>
+        <item name="colorPrimaryVariant">#3FA5CA</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">#B8D94D</item>
+        <item name="android:statusBarColor">#3F9FFF</item>
         <!-- Customize your theme here. -->
     </style>
 
@@ -18,11 +18,12 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-    <style name="ListViewStyle.Light" parent="android:style/Widget.ListView">
-        <item name="background"></item>
+
+    <style name="ListViewStyle" parent="android:style/Widget.ListView">
+        <item name="android:background">@color/white</item>
         <item name="android:divider"></item>
-        <item name="android:dividerHeight">1dp</item>
-        <item name="android:listSelector"></item>
+        <item name="android:dividerHeight">5dp</item>
+        <item name="android:listSelector">@color/blue</item>
         <item name="android:drawSelectorOnTop">false</item>
         <item name="android:cacheColorHint">#00000000</item>
     </style>
