--- a/app/src/main/res/layout/activity_patient_data_verwalter.xml
+++ b/app/src/main/res/layout/activity_patient_data_verwalter.xml
@@ -206,7 +206,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
-        android:text="Discharged" />
+        android:text="Discharge" />
 
 
 
