--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="150dp"
         android:width="150dp"
         android:height="75dp"
-        android:text="Arzt" />
+        android:text="Doctor" />
 
     <Button
         android:id="@+id/labor"
@@ -37,7 +37,7 @@
         android:layout_marginTop="100dp"
         android:width="150dp"
         android:height="75dp"
-        android:text="Labor" />
+        android:text="Lab" />
 
     <Button
         android:id="@+id/verwalter"
@@ -48,6 +48,6 @@
         android:layout_marginTop="100dp"
         android:width="150dp"
         android:height="75dp"
-        android:text="Verwalter" />
+        android:text="Admin" />
 
 </RelativeLayout>
