--- a/app/src/main/res/layout/fragment_verwalter_menu.xml
+++ b/app/src/main/res/layout/fragment_verwalter_menu.xml
@@ -36,7 +36,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Patient-Liste"
+        android:text="Patient List"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
 
