--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -19,7 +19,7 @@
     </style>
     <style name="ListViewStyle" parent="android:style/Widget.ListView">
         <item name="android:background">@color/lightBlack</item>
-        <item name="android:divider"></item>
+        <item name="android:divider">#14405E</item>
         <item name="android:dividerHeight">5dp</item>
         <item name="android:listSelector">@color/blue</item>
         <item name="android:drawSelectorOnTop">false</item>
