--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,7 +21,7 @@
 
     <style name="ListViewStyle" parent="android:style/Widget.ListView">
         <item name="android:background">@color/white</item>
-        <item name="android:divider"></item>
+        <item name="android:divider">#408BC5</item>
         <item name="android:dividerHeight">5dp</item>
         <item name="android:listSelector">@color/blue</item>
         <item name="android:drawSelectorOnTop">false</item>
