--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,7 +18,7 @@
         <item name="windowNoTitle">true</item>
     </style>
     <style name="ListViewStyle" parent="android:style/Widget.ListView">
-        <item name="android:background">@color/lightBlack</item>
+        <item name="android:background">#979292</item>
         <item name="android:divider">#14405E</item>
         <item name="android:dividerHeight">5dp</item>
         <item name="android:listSelector">@color/blue</item>
