--- a/app/src/main/res/layout/add_patient.xml
+++ b/app/src/main/res/layout/add_patient.xml
@@ -116,22 +116,25 @@
         android:layout_marginLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Geburtsdatum(in YYYY-MM-DD) " />
+        android:text="Geburtsdatum: " />
 
-    <EditText
-        android:id="@+id/editbirthDate"
-        android:layout_below="@id/birthDate"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="20dp"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/datePicker"
+        style="?android:spinnerStyle"
+        android:layout_width="281dp"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName" />
+        android:layout_below="@+id/birthDate"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:onClick="openDatePicker"
+        android:text="Date"
+        android:textSize="17.5dp"
+        />
 
     <TextView
         android:id="@+id/nummer"
-        android:layout_below="@id/editbirthDate"
-        android:layout_marginTop="5dp"
+        android:layout_below="@id/datePicker"
+        android:layout_marginTop="15dp"
         android:layout_marginLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -173,17 +176,15 @@
         android:id="@+id/sex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sex" />
+        android:text="Sex:" />
 
-    <EditText
-        android:layout_below="@+id/sex"
+    <Spinner
         android:layout_marginTop="5dp"
         android:layout_marginLeft="20dp"
+        android:layout_below="@+id/sex"
         android:id="@+id/editSex"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName" />
+        android:layout_width="281dp"
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/submit"
