--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -19,8 +19,8 @@
     </style>
     <style name="ListViewStyle" parent="android:style/Widget.ListView">
         <item name="android:background">#979292</item>
-        <item name="android:divider">#14405E</item>
-        <item name="android:dividerHeight">5dp</item>
+        <item name="android:divider">#ACB1B5</item>
+        <item name="android:dividerHeight">2dp</item>
         <item name="android:listSelector">@color/blue</item>
         <item name="android:drawSelectorOnTop">false</item>
         <item name="android:cacheColorHint">#00000000</item>
