--- a/app/src/main/res/layout/activity_search_verwalter.xml
+++ b/app/src/main/res/layout/activity_search_verwalter.xml
@@ -19,6 +19,7 @@
         app:srcCompat="@android:drawable/ic_menu_revert" />
 
     <SearchView
+        android:background="@drawable/item_curved_night"
         android:layout_toRightOf="@id/back"
         android:id="@+id/search_bar"
         android:layout_width="393dp"
@@ -29,11 +30,11 @@
         android:layout_centerHorizontal="true"
         android:queryHint="search here" />
 
-    <ListView
-        android:layout_below="@id/search_bar"
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        style="@style/ListViewStyle"
-        />
+        android:layout_below="@+id/search_bar"
+        android:layout_marginTop="15dp" />
+
 </RelativeLayout>
