--- a/app/src/main/res/layout/activity_blut_test_liste.xml
+++ b/app/src/main/res/layout/activity_blut_test_liste.xml
@@ -31,13 +31,12 @@
         tools:layout_editor_absoluteX="21dp"
         tools:layout_editor_absoluteY="18dp" />
 
-    <ListView
-        android:layout_below="@+id/bluttestliste"
-        android:layout_marginTop="20dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_item_blut"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/listview"
-        style="@style/ListViewStyle"/>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/bluttestliste"
+        android:layout_marginTop="15dp" />
 
 
 
