--- a/app/src/main/res/layout/fragment_arzt_menu.xml
+++ b/app/src/main/res/layout/fragment_arzt_menu.xml
@@ -8,8 +8,9 @@
 
 
     <SearchView
+        android:background="@drawable/item_curved_night"
         android:id="@+id/search_bar"
-        android:layout_width="393dp"
+        android:layout_width="370dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:elevation="3dp"
