--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="lightBlack">#4E4B4B</color>
     <color name="gray">#656561</color>
     <color name="blue">#2484e3</color>
+    <color name="dark_cloudy_blue">#282d45</color>
 </resources>
