--- a/app/src/main/res/layout/activity_blut_test_result.xml
+++ b/app/src/main/res/layout/activity_blut_test_result.xml
@@ -38,7 +38,7 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Datum: " />
+        android:text="Date: " />
 
     <TextView
         android:id="@+id/dateText"
