--- a/app/src/main/res/layout/activity_mrt_result.xml
+++ b/app/src/main/res/layout/activity_mrt_result.xml
@@ -43,5 +43,5 @@
         android:textStyle="bold"
         android:layout_marginBottom="30dp"
         android:layout_centerHorizontal="true"
-        android:text="MRT-Ergebniss :" />
+        android:text="MRT-Result :" />
 </RelativeLayout>
